# Bachelor-Thesis

./: .gitignore  .gitmodules  DSP tests.ipynb  LICENSE  Presentazione.pptx  README.md
CMSIS/: CMakeLists.txt  build.bat  build.ps1
CMSIS/cmake/: gcc-arm-none-eabi.cmake
Firmware/: .clangd  .cproject  .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  Firmware.ioc  demo_gui.py  read_adc_buffers.ps1  read_adc_buffers.py  testdata_gen.py
Firmware/Core/Inc/: RingBuffer.h  dmm_dsp.h  main.h  stm32f4xx_it.h
Firmware/Core/Src/: RingBuffer.c  dmm_dsp.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Firmware/USB_DEVICE/App/: usb_device.c  usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h
Firmware/cmake/: gcc-arm-none-eabi.cmake  gcc-options.cmake
Multimeters/: Bozza schema multimetro.drawio
Op amp/: Op amp inverting.txt  Op amp non inverting.txt  circuit-20240802-2107.circuitjs.txt
Pictures and diagrams/: Algoritmo.drawio  Condizionamento segnale.drawio
